# Tars-rs

./: Cargo.toml
crates/api/: Cargo.toml  README.md
crates/api/src/: errors.rs  lib.rs  primitives.rs  utils.rs
crates/bitcoin/: Cargo.toml  README.md
crates/bitcoin/src/: lib.rs  network.rs
crates/bitcoin/src/htlc/: hash.rs  htlc.rs  mod.rs  script.rs  tx.rs  validate.rs
crates/bitcoin/src/indexer/: indexer.rs  primitives.rs
crates/evm/: README.md
crates/evm/src/: executor.rs  lib.rs  primitives.rs  test_utils.rs  traits.rs
crates/evm/src/events/: events.rs
crates/evm/src/htlc/: mod.rs  v1.rs  v2.rs  v3.rs
crates/evm/src/tx_handler/: mod.rs
crates/orderbook/: Cargo.toml  README.md
crates/orderbook/src/: errors.rs  lib.rs  order_mapper.rs  orderbook.rs  primitives.rs  test_utils.rs  traits.rs
crates/policy/: README.md
crates/policy/src/: solver_policy.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: chains.rs  errors.rs  lib.rs  primitives.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: lib.rs  utils.rs
src/: lib.rs
