[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
