[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = "0.10.3"
alloy = { workspace = true, features = ["full", "node-bindings", "eip712"] }
chrono = { workspace = true, features = ["serde"] }
eyre.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true